crates/toml_edit/tests/snapshots/invalid/table/append-with-dotted-keys-08.stderr
TOML parse error at line 8, column 3
  |
8 | b.c.t = "this should NOT be allowed"
  |   ^
duplicate key
